[package]
name = "apirs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surrealdb = "1.5.0"
uuid = "1.8.0"
actix-web = "4.5.1"
async-trait = "0.1.80"
derive_more = "0.99.17"
json = "0.12.4"
serde = { version = "1.0.202", features = ["derive"] }
validator = { version = "0.18.1", features = ["derive"] }
